--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8082
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-title: com.mysql.jdbc.Driver
     url: jdbc:mysql://172.16.33.134:3306/photop
     username: root
     password: 123456
