--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,15 @@ server:
 spring:
   datasource:
     driver-class-title: com.mysql.jdbc.Driver
-    url: jdbc:mysql://172.16.33.134:3306/photop
+    url: jdbc:mysql://60.205.202.96:3306/photop
     username: root
     password: 123456
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+  thymeleaf:
+    mode: HTML5
+logging:
+  config: classpath:logback.xml
+  path: /home/project/photop/log
